fixed background image issue on mobile. Fixed hr divider

--- a/projects/localweatherapp/weather-styles.css
+++ b/projects/localweatherapp/weather-styles.css
@@ -4,7 +4,7 @@ html{
 
 body {  
   background-image:  url('background.jpg'); 
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: bottom left center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -92,6 +92,10 @@ body {
 
 #weatherDescription{
   font-size: 25px;
+}
+
+#hr-divide{
+  width: 95%;
 }
 
 @media only screen and (max-width: 500px) {
